fix: responsiveness on mobile

--- a/styles/Preloader.module.css
+++ b/styles/Preloader.module.css
@@ -93,7 +93,7 @@
     justify-content: center;
     position: fixed;
     top: 0;
-    width: 100vw;
+    width: 100%;
     z-index: 90
 }
 
